[package]
name = "itaos"
version = "0.1.0"
authors = ["not_a_seagull <jtnunley01@gmail.com>"]
edition = "2018"

[target.'cfg(unix)'.dependencies]
# objc crates for interfacing with the runtime
objc = "0.2"

# crates that define elements of the OSX API
clever-graphics = "0.1.0"
cocoa = "0.24.0"
nix = "0.19.1"

# utility crates
flume = { version = "0.10", default-features = false }
log = "0.4"
once_cell = "1.5.2"
orphan-crippler = "0.1.1"
tinyvec = { version = "1.1", features = ["alloc"] }

[features]
parking_lot = ["clever-graphics/parking_lot", "once_cell/parking_lot", "orphan-crippler/parking_lot"]
