[package]
name = "itaos"
version = "0.1.0"
edition = "2018"

[target.'cfg(target_os = "macos")'.dependencies]
breadthread = { path = "../breadthread" }
cocoa = "0.24"
core-foundation = "0.9"
objc = { version = "0.2", features = ["exception"] }
orphan-crippler = "0.1"

[package.metadata.docs.rs]
default-target = "x86_64-apple-darwin"

[features]
parking_lot = ["breadthread/pl", "once_cell/parking_lot", "orphan-crippler/parking_lot"]
